objects/Best_Practice_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Date_Errors_Corrected__c</fullName>
        <inlineHelpText>What is the date the errors were corrected on</inlineHelpText>
        <label>Date Errors Corrected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Evaluation_QA_Completed__c</fullName>
        <label>Date Evaluation QA Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Queue__c</fullName>
        <label>Date Sent to Queue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_YCN_Activated__c</fullName>
        <label>Date YCN Activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>ROUND((NOW() - CreatedDate),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_contains_Name_Domain_on_Yout__c</fullName>
        <label>Description contains Name/Domain on Yout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detailed_OPT_Notes__c</fullName>
        <inlineHelpText>MPA provided enough information, suggestions, and reasoning regarding the optimization</inlineHelpText>
        <label>Thorough Optimization Notes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Did_our_client_get_lead_s_contact_info__c</fullName>
        <label>Did our client get lead's contact info?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_they_follow_a_specific_script__c</fullName>
        <label>Did they follow a specific script?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_URL__c</fullName>
        <inlineHelpText>display URL within the ASW is accurate</inlineHelpText>
        <label>Display URL (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Does_client_have_proprietary_store_IDs__c</fullName>
        <inlineHelpText>Are client-generated store IDs used as unique identifiers for location names in Yodle Live, in any listings, or custom reports?</inlineHelpText>
        <label>Platform contains proprietary store IDs?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Correct_in_Video__c</fullName>
        <label>Domain Correct in Video</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain_Correct_on_YouTube__c</fullName>
        <label>Domain Correct on YouTube</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enhance_Build__c</fullName>
        <label>Enhance Build</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enhanced_Build_Not_Enhanced__c</fullName>
        <label>Enhanced Build/Not Enhanced</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Errors_Corrected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Errors Corrected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_EvaluationsuftJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluation_Status__c</fullName>
        <label>Evaluation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Complete- Review and Changes Needed</fullName>
                </value>
                <value>
                    <fullName>Complete- Review Only</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_for__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IMS who completed the optimization or setup in review.</description>
        <label>Evaluation for:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Ticket_ID__c</fullName>
        <description>Ticket ID for this case in an External Ticketing System</description>
        <inlineHelpText>Ticket ID for this case in an External Ticketing System</inlineHelpText>
        <label>External Ticket ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Ticket_System__c</fullName>
        <description>Relationship was created between Salesforce and this external ticketing system</description>
        <inlineHelpText>Relationship was created between Salesforce and this external ticketing system</inlineHelpText>
        <label>External Ticket System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filled_Out_Published__c</fullName>
        <label>Filled Out &amp; Published</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Followed_Sales_Notes__c</fullName>
        <label>Followed Sales Notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friendly_Helpful_and_Professional__c</fullName>
        <label>Friendly, Helpful and Professional?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Radius_20_miles__c</fullName>
        <label>Geo Radius Miles Appropriate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Radius__c</fullName>
        <inlineHelpText>IP targeting radius is set according to the 20 mile best practice, and 10 miles for NYC, SF, and Chicago</inlineHelpText>
        <label>Geo Radius (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Geo_Template_Grade2__c</fullName>
        <description>Average of the Geo template scores on the setup evaluation.</description>
        <formula>if
(isblank(Geo_Radius__c),
( (Geo_Terms__c +  Dangerous_Duplicates__c  +  Batch_Added_Terms__c  +  One_Geo_Template__c  +  Geo_Terms_Consistency__c ) / 5),
(( Geo_Terms__c +  Dangerous_Duplicates__c  +  Batch_Added_Terms__c  +  Geo_Radius__c +  One_Geo_Template__c  +  Geo_Terms_Consistency__c ) / 6))</formula>
        <inlineHelpText>overall geo template section grade</inlineHelpText>
        <label>Geo Template Grade (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Geo_Terms_Compliant__c</fullName>
        <description>10 mile terms for stationary business and 20 mile terms for mobile clients.</description>
        <label>Geo Terms Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Terms_Consistency__c</fullName>
        <inlineHelpText>Consistency between geo terms and landing page.</inlineHelpText>
        <label>Geo Terms Consistent w/Landing Pg</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Geo_Terms__c</fullName>
        <inlineHelpText>Goe terms are selected appropriately based on the stationary or mobile business type.</inlineHelpText>
        <label>Geo Terms (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Geo_message_clear_and_consistent__c</fullName>
        <label>Geo message clear and consistent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_terms_consistent_w_landing_page__c</fullName>
        <label>Geo terms consistent w/ landing page</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grammar_Error_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grammar Error(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guarantees__c</fullName>
        <inlineHelpText>Describe any contractual or verbal guarantees given to the client.</inlineHelpText>
        <label>Guarantees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_are_custom_reports_generated__c</fullName>
        <inlineHelpText>Describe the way custom reports are generated</inlineHelpText>
        <label>How are custom reports generated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_does_CS_publish_websites__c</fullName>
        <inlineHelpText>What does CS use to publish websites for this relationship?</inlineHelpText>
        <label>How does CS publish websites?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Page Designer</fullName>
                </value>
                <value>
                    <fullName>ASW</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_does_Web_Dev_publish_websites__c</fullName>
        <inlineHelpText>What does webdev use to publish websites for this relationship?</inlineHelpText>
        <label>How does Web Dev publish websites?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Page Designer</fullName>
                </value>
                <value>
                    <fullName>ASW</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_rings_did_they_answer_in__c</fullName>
        <label>How many rings did they answer in?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMS_on_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IMS on Account</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_NAP_doesn_t_match_list_inconsistency__c</fullName>
        <label>If NAP doesn't match, list inconsistency</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_no_describe_the_cur__c</fullName>
        <label>If yes, list the missing service(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_no_list_Yodle_best_practices_not_met__c</fullName>
        <label>If no, list Yodle standards not met</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_no_list_global_issues_seen__c</fullName>
        <label>If no, list global issues seen</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_no_state_current_and_ideal_segment__c</fullName>
        <label>If no, state current and ideal segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_non_compliant_what_are_the_issues__c</fullName>
        <label>If non-compliant, what are the issues?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_sync_issues_found_please_list__c</fullName>
        <label>If sync issues found, please list</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_vendor_issues_please_list__c</fullName>
        <inlineHelpText>If Yes, please describe the areas where other vendors may be affecting our SEO performance.</inlineHelpText>
        <label>If vendor issues, please list</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Not_Reflective_of_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Image doesn't reflect landing page/service/segment</description>
        <label>Image Not Reflective of Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Images_Reflective_of_Service__c</fullName>
        <inlineHelpText>Images are reflective of service and are clear and not pixelated.</inlineHelpText>
        <label>Quality Images</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Images__c</fullName>
        <label>Images</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Notes__c</fullName>
        <inlineHelpText>Add any relevant implementation notes here.</inlineHelpText>
        <label>Implementation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inconsistent_Fonts2__c</fullName>
        <description>More than 1 font type in 1 text widget</description>
        <inlineHelpText>More than 1 font type in 1 text widget</inlineHelpText>
        <label>Inconsistent Fonts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inconsistent_Fonts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inconsistent Fonts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incorrect_Tracking_Number_Displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incorrect Tracking Number Displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Citation_Build_Process_Used__c</fullName>
        <inlineHelpText>Which built process was implemented for this relationship?</inlineHelpText>
        <label>Initial Citation Build Process Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manually Built</fullName>
                </value>
                <value>
                    <fullName>YCN Activated</fullName>
                </value>
                <value>
                    <fullName>Never Built</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KW_Ad_Landing_Page_Relevancy__c</fullName>
        <inlineHelpText>a. ads speak specifically to every SC
            b. serving area/location used within the ad is the same as on the landing page
            c. all USPs/promotions used within the ad are present and visible on the landing  
                pages</inlineHelpText>
        <label>Consistency with KWs, Ads &amp; Landing Page</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Keyword_Rich_Domain_Used__c</fullName>
        <label>Appropriate Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landing_Pages_Match__c</fullName>
        <inlineHelpText>landing pages are appropriate and relevant to SCs</inlineHelpText>
        <label>Landing Pgs Match (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Landing_Pgs_Match__c</fullName>
        <description>No errors in bulk URL manager</description>
        <label>Landing Pgs Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Launched_Correctly__c</fullName>
        <label>Launched Correctly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_CS_Team_Member_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead CS Team Member 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluationsw9GC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_CS_Team_Member_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead CS Team Member 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluationsw9GM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_CS_Team_Member_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead CS Team Member 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluationsw9GW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_disclaimer_for_lawyers__c</fullName>
        <label>Legal disclaimer for lawyers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Google_guidelines_violated__c</fullName>
        <label>List Google guidelines violated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_Best_Practices_Notes__c</fullName>
        <label>Listing Best Practice Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Listings_meet_Google_Quality_Guidelines__c</fullName>
        <inlineHelpText>Do all listings comply with all published Google Quality Guidelines?</inlineHelpText>
        <label>Listings meet Google Guidelines</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listings_meet_Yodle_standards__c</fullName>
        <inlineHelpText>Do all listings comply with Yodle’s best practices?</inlineHelpText>
        <label>Listings meet Yodle standards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MA Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluations8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MIC_Category_Selection__c</fullName>
        <label>MIC Category Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category Selection Complete</fullName>
                </value>
                <value>
                    <fullName>Category Selection Incomplete</fullName>
                </value>
                <value>
                    <fullName>Category Selection Inaccurate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIC_Listing_Status_Accuracy__c</fullName>
        <inlineHelpText>Do data inaccuracies exist between the MIC case and actual listing status?</inlineHelpText>
        <label>MIC Listing Status Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accurate</fullName>
                </value>
                <value>
                    <fullName>Not Accurate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPA_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MPA Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluations7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Issue_OPT__c</fullName>
        <inlineHelpText>Not mentioned as an issue - 0%
Several issues identified, but not tackled - 25% 
Several issues identified, partially tackled/not tackled appropriately - 50%
Several issues identified, most issues tackled - 75%
All issues identified &amp; tackled - 100%</inlineHelpText>
        <label>All Perf Issues Identified &amp; Tackled</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manager_Notes__c</fullName>
        <label>Manager Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maps_Evaluation_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Evaluation For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_EvaluationsI1Mi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meta_Descriptions__c</fullName>
        <label>Meta Descriptions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Missing_Characters_Apostrophe_Comma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing/Addl Character(Apostrophe,Comma)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Content__c</fullName>
        <description>Blank pages, content that is cut off</description>
        <inlineHelpText>Blank pages, content that is cut off</inlineHelpText>
        <label>Missing Content</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Business_Targeting__c</fullName>
        <inlineHelpText>Do the Maps listings have Yodle’s mobile best practices implemented?</inlineHelpText>
        <label>Mobile Business Targeting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non-Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Must_have_a_name_campaign__c</fullName>
        <label>Must have a name campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non-Complaint</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Must_have_a_principal_service_group__c</fullName>
        <label>Must have a principal service group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non-Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAP_Standardization__c</fullName>
        <inlineHelpText>Do the Name, Address, Phone and business descriptions for each listing match what is in the ASW?</inlineHelpText>
        <label>NAP Standardization Matches ASW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCS_Sent_to_Correct_Queue__c</fullName>
        <label>NCS Sent to Correct Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Address_Phone_in_Footer__c</fullName>
        <label>Name, Address &amp; Phone in Footer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Natpal_Tracking_Code_Present__c</fullName>
        <label>Natpal Tracking Code Present</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negatives_Overall_Grade2__c</fullName>
        <description>Average of negatives grades for the setup evaluation</description>
        <formula>No_Global_Negatives_Added__c</formula>
        <label>Negatives Overall Grade (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_Global_Negatives_Added__c</fullName>
        <inlineHelpText>no global negatives added during setup (except geo term negatives)</inlineHelpText>
        <label>No Global Negs Added (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>